Mejoro el test y agrego testeo del algoritmo que descomprime palabras comprimidas con FrontCoding